src/main/java/com/example/loginserver/Errors/LogsError.java
package com.example.loginserver.Errors;

public enum LogsError {

    GOOD,
    BLOCK,
    SPAM,
    WRONG_PASSWORD,
    NOT_FOUND
}
